# i3bar-workspace-icons

./: .pre-commit-config.yaml  .prettierrc.yml  LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
doc/templates/: README.md.jinja  readme_jinja.md
scripts/: build_README.py
src/i3bar_workspace_icons/: __init__.py  configuration.py  default_config.ini  icon_updater.py
tests/: test_configuration.py  test_icon_updater.py
